--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
       <div class="contenue">
         
-        <div class="vertical_box_2">
+        <div>
              <img src="assets/images/avatar-jessica.jpeg" width="100%" height="100%"/>
               <p class="titre">Jessica Randall</p>
               <p class="place">London, United Kingdom</p>
