--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <div class="container">
       <div class="contenue">
+        <div class="vertical_box">      
+        </div>
         <div class="entete">
             <img src="assets/images/avatar-jessica.jpeg" width="100%" alt ="Profile image" height="100%"/>
             <p class="titre">Jessica Randall</p>
