Modification taille de la fenetre

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <div class="contenue">
         <div class="vertical_box">      
         </div>
+        <div class="vertical_box">      
+        </div>
         <div class="entete">
             <img src="assets/images/avatar-jessica.jpeg" width="100%" alt ="Profile image" height="100%"/>
             <p class="titre">Jessica Randall</p>
@@ -37,6 +39,8 @@
         </div>
         <div class="vertical_box">
              <button class="btn">Instangram</button>
+        </div>
+        <div class="vertical_box">      
         </div>
         <div class="vertical_box">      
         </div>
